--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mofron-comp-login",
-  "version": "0.2.7",
+  "version": "0.2.8",
   "description": "login component for mofron",
   "main": "index.js",
   "scripts": {
@@ -23,7 +23,7 @@
     "front-end"
   ],
   "author": "simparts",
-  "license": "SEE LICENSE IN LICNESE",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/simpart/mofron-comp-login/issues"
   },
